@@ -4,15 +4,15 @@ locale-name=en
 RecipeBook=Recipe Book
 
 [mod-setting-name]
-rb-show-mod-gui-button=Show mod gui button [img=info]
+rb-open-item-hotkey=Open held item on hotkey [img=info]
 rb-open-fluid-hotkey=Open selected fluid on hotkey [img=info]
 rb-show-hidden-objects=Show hidden objects [img=info]
 rb-default-search-category=Default search category [img=info]
 
 [mod-setting-description]
-rb-show-mod-gui-button=If enabled, a search recipe book button will be added to the mod GUI in the top-left of your screen.
-rb-open-fluid-hotkey=If enabled, using the Recipe Book hotkey while hovering over a pipe, pump, storage tank, or fluid wagon will open that fluid's material page.
-rb-show-hidden-objects=If enabled, hidden recipes, materials, and crafters will be shown in the search list as well as in all of the lists throughout the mod. For expert players or modders only!
+rb-open-item-hotkey=If enabled, using the Recipe Book hotkey while holding an item will open that item's material page, if it exists.
+rb-open-fluid-hotkey=If enabled, using the Recipe Book hotkey while hovering over a pipe, pump, storage tank, or fluid wagon will open that fluid's material page, if it exists.
+rb-show-hidden-objects=If enabled, hidden crafters, materials, and recipes will be shown in the search list as well as in all of the lists throughout the mod. For expert players or modders only!
 rb-default-search-category=The category that the search GUI will open to by default.
 
 [shortcut-name]
