@@ -1,17 +1,24 @@
 data:extend{
   {
     type = 'bool-setting',
-    name = 'rb-open-fluid-hotkey',
+    name = 'rb-open-item-hotkey',
     setting_type = 'runtime-per-user',
     default_value = true,
     order = 'a'
   },
   {
     type = 'bool-setting',
+    name = 'rb-open-fluid-hotkey',
+    setting_type = 'runtime-per-user',
+    default_value = true,
+    order = 'b'
+  },
+  {
+    type = 'bool-setting',
     name = 'rb-show-hidden-objects',
     setting_type = 'runtime-per-user',
     default_value = false,
-    order = 'b'
+    order = 'c'
   },
   {
     type = 'string-setting',
@@ -19,6 +26,6 @@ data:extend{
     setting_type = 'runtime-per-user',
     default_value = 'material',
     allowed_values = {'crafter', 'material', 'recipe'},
-    order = 'c'
+    order = 'd'
   }
 }
